<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <name>internauta-utils</name>
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.bologna.ausl.internauta.utils</groupId>
    <artifactId>internauta-utils</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <!--<parent>
        <groupId>it.bologna.ausl.internauta</groupId>
        <artifactId>internauta</artifactId>
        <relativePath>../Internauta/pom.xml</relativePath>
        <version>1.0</version>
    </parent>-->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.12</version>
    </parent>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
   
    <!-- sub modules -->
    <modules>
        <module>bds-types</module>
        <module>jpa-tools</module>
        <module>parameters-manager</module>
        <module>minIO-manager</module>
        <module>repository-wrapper</module>
        <module>eml-handler</module>
        <module>estrattore</module>   
        <module>rubrica-client</module>
        <module>middelmine</module>
        <module>authorization-utils</module>
        <module>document-generator</module>
        <module>firma-data</module>
        <module>firma</module>
        <module>mime-type-utilities</module>
        <module>downloader</module>
        <module>masterjobs</module>
    </modules>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
<!--    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.8.1</version>
        </dependency>
    </dependencies>-->
    <profiles>
        <profile>
            <id>noTest-next-spring-data-rest-framework</id>
            <activation>
                <property>
                    <name>noTest-NextSDRFramework</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.4.2</version>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>